corrected no markets message spacing on markets list

--- a/packages/sport/src/modules/markets/markets-view.styles.less
+++ b/packages/sport/src/modules/markets/markets-view.styles.less
@@ -77,7 +77,7 @@
     }
 
     > span {
-      margin-top: @size-24;
+      margin: @size-24 0;
     }
 
     > div:last-of-type:not(.SubCategoriesFilter) {
@@ -130,7 +130,7 @@
       }
 
       > span {
-        margin-top: @size-16;
+        margin: @size-16 0;
       }
 
       > div:nth-of-type(2) {
